Fix byline flexend align self

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
-@import url(https://fonts.googleapis.com/css?family=Satisfy:regular);@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
+@import url(https://fonts.googleapis.com/css?family=Satisfy:regular);
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 @import url(https://fonts.googleapis.com/css?family=Shadows+Into+Light:regular);
-@import url(https://fonts.googleapis.com/css?family=Homemade+Apple:regular);
 
 :root {
-  --main-color: #1F2937;
-  --main-text-color: #F9FAF8;
-  --secondary-text-color: #E5E7EB ;
+  --main-color: #1f2937;
+  --main-text-color: #f9faf8;
+  --secondary-text-color: #e5e7eb;
   --button-color: #3882f6;
   --info-text: #1f2937;
 }
@@ -15,6 +15,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   font-family: 'Roboto', monospace;
 }
@@ -33,15 +34,15 @@ ul {
   padding: 10px 30px;
   color: #fff;
   /* background: rgb(12, 133, 214); */
-  background-image: linear-gradient(#42A1EC, #0070C9);
-  border: 1px solid #0077CC;
+  background-image: linear-gradient(#42a1ec, #0070c9);
+  border: 1px solid #0077cc;
   border: none;
   border-radius: 5px;
 }
 
 .btn:hover {
-  background-image: linear-gradient(#51A9EE, #147BCD);
-  border-color: #1482D0;
+  background-image: linear-gradient(#51a9ee, #147bcd);
+  border-color: #1482d0;
   text-decoration: none;
 }
 
@@ -49,7 +50,6 @@ ul {
   background-color: var(--main-color);
   /* height: 60px; */
 }
-
 
 .container {
   max-width: 1100px;
@@ -81,15 +81,13 @@ ul {
 .navbar a:hover {
   color: #e1e1e1;
   text-decoration: none;
-  border-bottom: #E5E7EB 2px solid;
+  border-bottom: #e5e7eb 2px solid;
 }
-
-
 
 .logo {
   font-size: 32px;
   font-family: 'shadows into light';
-  letter-spacing: .10rem;
+  letter-spacing: 0.1rem;
   /* font-style: italic; */
   font-weight: 600;
 }
@@ -97,28 +95,21 @@ ul {
 .header {
   min-height: 400px;
   background-color: var(--main-color);
-
 }
 
 .header .container {
   background-color: var(--main-color);
   display: flex;
-  align-items:center;
+  align-items: center;
   justify-content: center;
   /* padding: 50px; */
 }
-
-.header .container div:first-child {
-  /* padding-right: 100px; */
-  /* text-align: center; */
-}
-
-
 
 .header h1 {
   font-family: 'Homemade Apple', sans-serif;
   font-weight: 300;
 }
+
 img {
   max-width: 100%;
 }
@@ -134,7 +125,6 @@ img {
   color: var(--secondary-text-color);
   max-width: 600px;
   margin: 20px 0 25px;
-  
 }
 
 .header .container img {
@@ -148,9 +138,11 @@ img {
 main {
   background-color: #f4f4f4;
 }
+
 .cards {
   background-color: #f4f4f4;
 }
+
 .flex-items {
   display: flex;
   justify-content: center;
@@ -163,11 +155,9 @@ main {
   /* padding: 25px 0; */
 }
 
-.flex-items > div {
+.flex-items>div {
   padding: 20px;
 }
-
-
 
 .icon-title {
   display: flex;
@@ -202,12 +192,9 @@ main {
   /* margin: 10px; */
   font-family: 'shadows into light', sans-serif;
   /* padding: 200px; */
-  
-  
 }
 
 /* move byline */
-
 
 /*=============================================
 =            footer            =
@@ -223,7 +210,14 @@ main {
   height: 100%;
   justify-content: center;
   align-content: center;
+  flex-direction: column;
+}
+
+.container .byline {
+  /* padding-left: 299px; */
+  font-weight: 600;
+  display: flex;
+  align-self: flex-end;
 }
 
 /*=====  End of footer  ======*/
-
